@@ -1,18 +1,21 @@
 package webConnection;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
 public class Packet {
+    private OperationType operationType;
     private String className;
     private String methodName;
-    private ArrayList<Objects> parameters = new ArrayList<>();
+    private ArrayList<Object> parameters = new ArrayList<>();
 
-    public Packet(String className, String methodName, Objects... parameters) {
+    public Packet(OperationType operationType, String className, String methodName, Object[] parameters) {
+        this.operationType = operationType;
         this.className = className;
         this.methodName = methodName;
-        this.parameters.addAll(List.of(parameters));
+        this.parameters.addAll(Arrays.asList(parameters));
     }
 
     public String getClassName() {
@@ -23,7 +26,11 @@ public class Packet {
         return methodName;
     }
 
-    public ArrayList<Objects> getParameters() {
+    public ArrayList<Object> getParameters() {
         return parameters;
+    }
+
+    public OperationType getOperationType() {
+        return operationType;
     }
 }
